<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginOptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLoginOption"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_25sdp"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin_SignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/Red"
                android:fontFamily="@font/semibold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/ivLoginOption" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin_SignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/Black"
                android:fontFamily="@font/semibold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/btnLogin_SignUp" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_55sdp"
                android:background="@color/Black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvLoginWith"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_55sdp"
                android:fontFamily="@font/semibold"
                android:padding="@dimen/_10sdp"
                android:text="@string/or_login_with"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/viewLine"
                app:layout_constraintRight_toLeftOf="@+id/viewEndLine"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:id="@+id/viewEndLine"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_55sdp"
                android:background="@color/Black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/tvLoginWith"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_55sdp"
                android:text="@string/continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/gogle"
                app:iconSize="@dimen/_20sdp"
                app:iconTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginWith"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/facebook"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_55sdp"
                android:text="@string/continue_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/fb"
                app:iconSize="@dimen/_20sdp"
                app:iconTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnGoogle"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApple"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/Black"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_55sdp"
                android:text="@string/continue_with_apple"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/apple"
                app:iconSize="@dimen/_20sdp"
                app:iconTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFacebook"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



