<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ConfirmAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Black"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackConfirmAccount"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/imageview"
                android:onClick="ivBackConfirmAccount"
                android:src="@drawable/back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7sdp"
                android:fontFamily="@font/regular"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/confirm_account_Tb"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                tools:ignore="RtlSymmetry" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBar"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="0.79">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppBar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSentMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/regular"
                android:text="@string/we_ll_sent_an_email_with_4_digit_code"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/regular"
                android:text="@string/to_loremipsun_mail_com"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSentMail" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/bold"
                android:inputType="phone"
                android:textColor="@color/Black"
                app:bar_enabled="false"
                app:box_margin="@dimen/_15sdp"
                app:height="@dimen/_40sdp"
                app:itemSpacing="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMail"
                app:length="4"
                app:otp_box_background="@drawable/otpview_custom"
                app:otp_text_size="24dp"
                app:state_filled="true"
                app:width="@dimen/_40sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:backgroundTint="@color/Red"
                android:fontFamily="@font/semibold"
                android:onClick="Confirm"
                android:text="@string/confirm_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp_view"
                app:layout_constraintVertical_bias="0.200"
                tools:layout_editor_absoluteX="22dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:text="@string/don_t_get_code_tv"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@+id/Resend"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnConfirm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:text="@string/resend_tv"
                android:textColor="@color/Red"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/getCode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

